...
                            editable={ !loading }
                        />
                        <PasswordField
                            label={ t('field.password') }
                            value={ password }
                            onChangeText={ setPassword }
                            placeholder="••••••••"
                            textContentType="newPassword"
                            returnKeyType="next"
                            error={ errors.password }
                            errorColor={ theme.ink.primary }
                            editable={ !loading }
                        />
...
