...
                                throw new Error('Function not implemented.');
                            } }
                        />
                    </View>
                    { error && <Text style={ styles.error }>{ error }</Text> }
                    <View style={ styles.buttonsContainer }>
                        <Button label="Cancel" onPress={ () => router.back() } />
                        <Button label="Add" onPress={ onSave } />
                    </View>
                </View>
            </ScrollView>
        </SafeAreaView>
    );
...
